# binge-watch-me

./: .gitignore  BingeWatchMe.spec  Cargo.toml  HEADER  LICENSE  README.md  abandoned_functionality.py  environment.yml  index.html  media_server.py  media_server.spec  requirements.txt
.github/workflows/: main.yml
frontend/: app.js  index.html  setup.html  style.css
icons/: icon.icns
src/: auth.rs  main.rs  network.rs  protocol.rs  server.rs  tray.rs  updater.rs
src/platform/: macos.rs  mod.rs
templates/: index.html  logs.html
